[package]
name = "node-template"
version = "4.0.0-dev"
description = "A fresh FRAME-based Substrate node, ready for hacking."
authors = ["Substrate DevHub <https://github.com/substrate-developer-hub>"]
homepage = "https://substrate.io/"
edition = "2021"
license = "Unlicense"
publish = false
repository = "https://github.com/substrate-developer-hub/substrate-node-template/"
build = "build.rs"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[[bin]]
name = "node-template"

[dependencies]
clap = { version = "3.1.18", features = ["derive"] }

sc-cli = { git = "https://github.com/paritytech/substrate.git", branch = "ankan/paged-rewards-staking-api" }
sp-core = { git = "https://github.com/paritytech/substrate.git", branch = "ankan/paged-rewards-staking-api" }
sc-executor = { git = "https://github.com/paritytech/substrate.git", branch = "ankan/paged-rewards-staking-api" }
sc-service = { git = "https://github.com/paritytech/substrate.git", branch = "ankan/paged-rewards-staking-api" }
sc-telemetry = { git = "https://github.com/paritytech/substrate.git", branch = "ankan/paged-rewards-staking-api" }
sc-keystore = { git = "https://github.com/paritytech/substrate.git", branch = "ankan/paged-rewards-staking-api" }
sc-transaction-pool = { git = "https://github.com/paritytech/substrate.git", branch = "ankan/paged-rewards-staking-api" }
sc-transaction-pool-api = { git = "https://github.com/paritytech/substrate.git", branch = "ankan/paged-rewards-staking-api" }
sc-consensus-aura = { git = "https://github.com/paritytech/substrate.git", branch = "ankan/paged-rewards-staking-api" }
sp-consensus-aura = { git = "https://github.com/paritytech/substrate.git", branch = "ankan/paged-rewards-staking-api" }
sp-consensus = { git = "https://github.com/paritytech/substrate.git", branch = "ankan/paged-rewards-staking-api" }
sc-consensus = { git = "https://github.com/paritytech/substrate.git", branch = "ankan/paged-rewards-staking-api" }
sc-consensus-grandpa = { git = "https://github.com/paritytech/substrate.git", branch = "ankan/paged-rewards-staking-api" }
sp-consensus-grandpa = { git = "https://github.com/paritytech/substrate.git", branch = "ankan/paged-rewards-staking-api" }
sc-client-api = { git = "https://github.com/paritytech/substrate.git", branch = "ankan/paged-rewards-staking-api" }
sp-runtime = { git = "https://github.com/paritytech/substrate.git", branch = "ankan/paged-rewards-staking-api" }
sp-timestamp = { git = "https://github.com/paritytech/substrate.git", branch = "ankan/paged-rewards-staking-api" }
sp-inherents = { git = "https://github.com/paritytech/substrate.git", branch = "ankan/paged-rewards-staking-api" }
sp-keyring = { git = "https://github.com/paritytech/substrate.git", branch = "ankan/paged-rewards-staking-api" }
frame-system = { git = "https://github.com/paritytech/substrate.git", branch = "ankan/paged-rewards-staking-api" }
pallet-transaction-payment = { git = "https://github.com/paritytech/substrate.git", branch = "ankan/paged-rewards-staking-api" }
pallet-staking = { git = "https://github.com/paritytech/substrate.git", branch = "ankan/paged-rewards-staking-api" }

# These dependencies are used for the node template's RPCs
jsonrpsee = { version = "0.15.1", features = ["server"] }
sc-rpc = { git = "https://github.com/paritytech/substrate.git", branch = "ankan/paged-rewards-staking-api" }
sp-api = { git = "https://github.com/paritytech/substrate.git", branch = "ankan/paged-rewards-staking-api" }
sc-rpc-api = { git = "https://github.com/paritytech/substrate.git", branch = "ankan/paged-rewards-staking-api" }
sp-blockchain = { git = "https://github.com/paritytech/substrate.git", branch = "ankan/paged-rewards-staking-api" }
sp-block-builder = { git = "https://github.com/paritytech/substrate.git", branch = "ankan/paged-rewards-staking-api" }
sc-basic-authorship = { git = "https://github.com/paritytech/substrate.git", branch = "ankan/paged-rewards-staking-api" }
substrate-frame-rpc-system = { git = "https://github.com/paritytech/substrate.git", branch = "ankan/paged-rewards-staking-api" }
pallet-transaction-payment-rpc = { git = "https://github.com/paritytech/substrate.git", branch = "ankan/paged-rewards-staking-api" }

# These dependencies are used for runtime benchmarking
frame-benchmarking = { git = "https://github.com/paritytech/substrate.git", branch = "ankan/paged-rewards-staking-api" }
frame-benchmarking-cli = { git = "https://github.com/paritytech/substrate.git", branch = "ankan/paged-rewards-staking-api" }

# Local Dependencies
node-template-runtime = { version = "4.0.0-dev", path = "../runtime" }

lazy_static = "1.4.0"
rand = "0.8.5"


# CLI-specific dependencies
try-runtime-cli = { version = "0.10.0-dev", optional = true, git = "https://github.com/paritytech/substrate.git", branch = "ankan/paged-rewards-staking-api" }

[build-dependencies]
substrate-build-script-utils = { git = "https://github.com/paritytech/substrate.git", branch = "ankan/paged-rewards-staking-api" }

[features]
default = []
runtime-benchmarks = ["node-template-runtime/runtime-benchmarks"]
# Enable features that allow the runtime to be tried and debugged. Name might be subject to change
# in the near future.
try-runtime = ["node-template-runtime/try-runtime", "try-runtime-cli"]

